--- a/data/index.html
+++ b/data/index.html
@@ -24,24 +24,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,600,700,800" rel="stylesheet">
-    <title>vuMeter Clock</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <title>vuClock</title>
 </head>
 
 <body>
-    <div>
-        <h5>vuClock</h5>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-auto ">
+                <img src="img/logo.svg" height="50" />
+            </div>
+            <div class="col-2 p-0">
+                <p>v0.1</p>
+            </div>
+        </div>
+
         <div class="main-panel">
             <div class="content">
                 <div class="row">
                     <div class="col-12 ">
-                        <div class="row p-4">
+                        <div class="row pt-4">
                             <div class="col">
                                 <div class="card p-3">
                                     <div class="card-header">
                                         <h5 class="card-category">NTP Server</h5>
                                     </div>
                                     <div>
-                                        <h5 class="card-title">pool.time.gov</h5>
+                                        <h5 id="ntp_server" class="card-title"></h5>
                                     </div>
                                 </div>
                             </div>
@@ -66,36 +75,70 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row p-4">
-                            <div class="col">
-                                <div class="card p-3">
-                                    <div class="card-header">
-                                        <h5 class="card-category">WiFi</h5>
-                                    </div>
-                                    <div>
-                                        <h5 class="card-title">grover</h5>
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="card p-3">
+                                        <div class="card-header">
+                                            <div class="row">
+                                                <div class="col-auto">
+                                                    <span class="card-category material-symbols-outlined">
+                                                        wifi
+                                                    </span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <h5 class="card-category">WiFi</h5>
+                                                </div>
+                                                </row>
+
+                                            </div>
+                                            <div>
+                                                <h5 id="ssid" class="card-title"></h5>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col">
-                                <div class="card p-3">
-                                    <div class="card-header">
-                                        <h5 class="card-category">Network</h5>
-                                    </div>
-                                    <div>
-                                        <h5 class="card-title">IP Address: 192.168.1.247</h5>
+                                <div class="col">
+                                    <div class="card p-3">
+                                        <div class="card-header">
+                                            <div class="row">
+                                                <div class="col-auto">
+                                                    <span class="card-category material-symbols-outlined">
+                                                        view_comfy_alt
+                                                    </span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <h5 class="card-category">LED Color</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row pt-2">
+                                            <div class="col-6">
+                                                <input type="color" id="colorpicker" value="#ff0000">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row p-4">
-                            <div class="col">
-                                <div class="card p-3">
-                                    <div class="card-header">
-                                        <h5 class="card-category">LED Color</h5>
-                                    </div>
-                                    <div>
-                                        <input type="color" id="colorpicker" value="#ff0000">
+                                <div class="col">
+                                    <div class="card p-3">
+                                        <div class="card-header">
+                                            <div class="row">
+                                                <div class="col-auto">
+                                                    <span class="card-category material-symbols-outlined">
+                                                        sunny
+                                                    </span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <h5 class="card-category">Brightness</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row pt-2">
+                                            <div class="col-6">
+                                                <input class="slider" type="range" id="brightnessslider" value="50"
+                                                    min="1" max="255">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -105,41 +148,12 @@
             </div>
         </div>
     </div>
-
-
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <script>
-
-
-        // Request (GET http://192.168.1.247/api/time)
-        function getTime() {
-            jQuery.ajax({
-                url: 'http://192.168.1.247/api/time',
-                type: 'GET',
-            })
-                .done(function (data, textStatus, jqXHR) {
-                    console.log('HTTP Request Succeeded: ' + jqXHR.status)
-                    console.log(data)
-                    document.getElementById('time').innerHTML = data.time.current_time
-                })
-                .fail(function (jqXHR, textStatus, errorThrown) {
-                    console.log('HTTP Request Failed')
-                    document.getElementById('time').innerHTML = 'Error'
-                })
-                .always(function () {
-                    /* ... */
-                })
-        }
-
-        //Run on page load
-        getTime()
-        //Run every minute
-        setInterval(getTime, 60000)
-    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
