working on led setup

--- a/data/index.html
+++ b/data/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container justify-content-center">
         <div class="row">
             <div class="col-auto ">
                 <img src="img/logo.svg" height="50" />
@@ -40,9 +40,9 @@
         </div>
 
         <div class="main-panel">
-            <div class="content">
+            <div class="content ">
                 <div class="row">
-                    <div class="col-12 ">
+                    <div class="col">
                         <div class="row pt-4">
                             <div class="col">
                                 <div class="card p-3">
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12">
+                        <div class="col-auto">
                             <div class="row">
                                 <div class="col">
                                     <div class="card p-3">
@@ -108,7 +108,7 @@
                                                     </span>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <h5 class="card-category">LED Color</h5>
+                                                    <h5 class="card-category">Color</h5>
                                                 </div>
                                             </div>
                                         </div>
